bin_PROGRAMS = fcmanager

AM_CFLAGS = -g -I../include
AM_CXXFLAGS = -g -I../include

fcmanager_SOURCES = \
	main.c fc_tools.c fc_time.c fc_com_manager.c \
        fc_context.c fc_graph.c fc_stack.c fc_functions.c \
        fc_hash.c  fc_memory_manager.c fc_com.c \
	fc_fifo.c fc_semaphore.c fc_xlhash.c \
	fc_xhash.c fc_tools.h fc_time.h fc_com_manager.h \
        fc_context.h fc_graph.h fc_stack.h fc_functions.h \
        fc_xhash.h fc_memory_manager.h fc_com.h \
        fc_global.h fc_hash.h \
	fc_fifo.h fc_semaphore.h fc_xlhash.h

#fcmanager_CFLAGS = $(AM_CFLAGS)
#fcmanager_CXXFLAGS = $(AM_CXXFLAGS)



 
